--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
     <script crossorigin src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7.21.4/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
-
+    
     <style>
+        /* Custom styles are now embedded to prevent 404 errors */
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+        }
+
+        .dark {
+            --bg-color: #111827; --bg-secondary-color: #1f2937; --text-color: #e5e7eb;
+            --text-secondary-color: #9ca3af; --border-color: #374151; --hover-bg-color: #374151;
+        }
+
+        .light {
+            --bg-color: #f9fafb; --bg-secondary-color: #ffffff; --text-color: #1f2937;
+            --text-secondary-color: #4b5563; --border-color: #e5e7eb; --hover-bg-color: #f3f4f6;
+        }
+        
         .loading-container {
             display: flex; flex-direction: column; align-items: center; justify-content: center;
             min-height: 100vh; padding: 20px; font-family: system-ui, -apple-system, sans-serif;
@@ -22,6 +36,31 @@
             animation: spin 1s linear infinite; margin-bottom: 16px;
         }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+
+        /* Table Styles */
+        .glossary-table {
+            width: 100%; border-collapse: collapse; overflow: hidden;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); border-radius: 0.5rem;
+        }
+        .glossary-table th, .glossary-table td { padding: 12px 15px; text-align: left; }
+        .glossary-table thead tr { background-color: #3b82f6; color: #ffffff; text-align: left; }
+        .glossary-table tbody tr {
+            border-bottom: 1px solid var(--border-color); background-color: var(--bg-secondary-color);
+            transition: background-color 0.2s;
+        }
+        .glossary-table tbody tr.deleted {
+            background-color: #ef444420; text-decoration: line-through; color: var(--text-secondary-color);
+        }
+        .glossary-table tbody tr:last-of-type { border-bottom: 2px solid #3b82f6; }
+        .glossary-table tbody tr:not(.deleted):hover { background-color: var(--hover-bg-color); }
+
+        /* Download Button Style */
+        .download-button {
+            display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem;
+            border-radius: 0.375rem; background-color: #10b981; color: white;
+            cursor: pointer; transition: background-color 0.2s;
+        }
+        .download-button:hover { background-color: #059669; }
     </style>
 </head>
 <body>
@@ -33,15 +72,15 @@
     </div>
 
     <script type="text/babel">
-        // This function will now be handled inside the React component for caching.
-        // We just need to load the main script.
+        // The data loading and caching logic is now handled inside wiki.js
+        // This script just needs to load the main application file.
         fetch('wiki.js')
             .then(r => r.text())
             .then(glossaryCode => {
                 // Transpile and execute the wiki.js code
                 eval(Babel.transform(glossaryCode, { presets: ['react'] }).code);
 
-                // Render the React component, it will handle its own data fetching and caching.
+                // Render the React component. It will handle its own data fetching.
                 const root = ReactDOM.createRoot(document.getElementById('root'));
                 root.render(React.createElement(window.WikiGlossary));
             })
